# dbx-sql-runner

./: .gitignore  README.md  build.py  lint.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
dbt_lite.egg-info/: PKG-INFO
dbx_sql_runner/: api.py  cli.py  core.py  exceptions.py  linter.py  project.py  runner.py  scaffold.py
dbx_sql_runner/adapters/: base.py  databricks.py
models/: analysis_iot_sales_correlation.sql  downstream_features.sql  example.sql  fct_high_heat_alerts.sql  features.sql  int_iot_agg.sql  stg_iot_devices.sql
tests/: test_api.py  test_error_handling.py  test_metadata.py  test_modular.py  test_project.py  test_runner_logic.py  test_validation.py
